# amplify-automations

./: README.md  build_demo_notebook.py  pyproject.toml  requirements.txt
config/: client_engagement_letter_draft.yaml  pipeline.yaml
examples/: run_client_engagement_letter_draft.py
notebooks/: Client_Engagement_Letter_Draft_Tutorial.ipynb  client_engagement_letter_draft_example.py  fdc92fe1-f8ab-42b5-b3d0-9e0beb1b9ece.json  tutorial_catalog.json
src/: cli.py
src/amplify_automations/: runner.py
src/amplify_automations/core/: contracts.py  logging_utils.py  normalization.py  registry.py  step_base.py  tutorial_catalog.py  validation_utils.py  versioning.py
src/amplify_automations/plugins/: client_engagement_letter_draft.py  fx_translator.py  pdf_assembler.py  tb_collector.py
src/core/: contracts.py  io_utils.py  registry.py  step_base.py  validation_utils.py
src/plugins/: fx_translator.py  pdf_assembler.py  tb_collector.py
tests/: test_core_utils.py  test_fx_translator.py  test_normalization.py  test_pdf_assembler.py  test_runner.py  test_tb_collector.py  test_tutorial_catalog.py
