[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplify-automations"
version = "0.1.0"
description = "Automations for financial processes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "rapidfuzz",
    "openpyxl",
    "PyPDF2",
    "fpdf",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
